test/match9.l1.out
falling through
ok
error: attempt to fall through to a @match
               error	(builtin function)
               entry	(match9.l1:17)
